--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -620,6 +620,7 @@ header {
 
 .products.second { 
 	background: $basic-white;
+	background-image: url('../../archive/images/bg-4.png');
 }
 
 
@@ -663,6 +664,24 @@ ul.nutrients-tags {
 
 .carousel-control-next {
     right: -150px;
+}
+
+.carousel-item {
+	p { 
+		&.subline {
+			font-weight: 700;
+		}
+	}
+}
+
+
+
+
+
+
+.carousel-item .fa-chevron-right {
+	font-size: 8px;
+	vertical-align: middle;
 }
 
 .pointers {
